- fixed overflow issue - got rid of table spacing - set time width

--- a/less/about/history.less
+++ b/less/about/history.less
@@ -79,14 +79,18 @@ body {
     }
 
     .sortableTable {
+      border-spacing: 0px;
+
       .time {
         color: #656565;
         font-weight: 800;
         text-align: center;
+        width: 154px;
       }
       .title {
         max-width: 415px;
         text-overflow: ellipsis;
+        overflow: hidden;
       }
       .domain {
       }
